[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CuveLaboClient"
version = "1.0.0"
authors = [
  	{ name="Trioen Loïc", email="trioen.loic@gmail.com" }
]
description = "Client Side for the CuveLabo"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# license = "MIT"
# license-files = ["LICEN[CS]E*"]
dependencies = [
	'requests',
  'sseclient'
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/Tortank",
  "src/Carapuce",
  "src/Common"
]

# [project.urls]
# Repository = "https://github.com/AlphaGaming7780/TortankWebServer.git"
# Homepage = "https://github.com/AlphaGaming7780/TortankWebServer"
# Issues = "https://github.com/AlphaGaming7780/TortankWebServer/issues"